# bloomin

./: .gitignore  CreditIQ webiste content.docx  PROJECT_ROADMAP.md  STRESS_TEST_RESULTS.md  afdr.py  baselines.py  benchmark_afdr.py  check_w2vec_geometry.py  download_celeba.py  download_celeba.sh  embed_wiki.py  output_anchor.txt  output_anchor_collapsed.txt  output_annealed.txt  output_closed.txt  output_constrained.txt  output_constrained_v2.txt  output_delayed.txt  output_final.txt  output_final_hbar5.txt  output_final_v3.txt  output_fixed.txt  output_phased.txt  output_phased_damped.txt  output_phased_final.txt  output_projected.txt  output_scaled_20d.txt  output_scaled_boosted.txt  output_settling.txt  test_A.py  test_B.py  vq_qm_experiment.py  witness_arithmetic_1_0.tex
REWA-GPT/: rewa_gpt_demo.py  rewa_gpt_v2_demo.py  rewa_gpt_v3_demo.py  rewa_gpt_v4_eval.py  rewa_gpt_v4_train.py  rewa_gpt_v4_utils.py  rewa_v4eval.py  rewavali.py
aci-toy-physics/: aci_core.py
aci_experiment/: aci_extensions.py  aci_paper.aux  aci_paper.out  aci_paper.tex  aci_supply_chain.py  aci_v2_field_engine.py  aci_validation.py
advective-character-river/: advective_bloom.py  character_river.py  holographic_bloom.py  holographic_clickstream.py  learned_embedding_river.py  stochastic_river.py
adversarial-rewa-release/: PAPER_STRATEGY.md  README.md  evaluate.py  paper.tex  quick_test_hard_negatives.py  requirements.txt  train.py  train2.py
apt-detection-system/: ARCHITECTURE.md  GENERATE_LARGE_DATASET.sh  HIGH_FIDELITY_TESTING.md  MCP_INTEGRATION.md  MCP_STREAMING_PAGINATION.md  OPTIMIZATION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STREAMING_TESTING.md  TEAM_BRIEFING.md  config.yaml  main.py  requirements.txt
axiom_validation/: experiment2_antipodal_negation.py  experiment3_linear_aggregation.py  experiment4_semantic_drift.py  experiment5_energy_landscape.py  experiment6_geometric_transformation.py  experiment7_two_stage_retrieval.py  (+3 more)
faiss-sphere-rs/: Cargo.toml  README.md
faiss-sphere-rs/examples/: benchmark.rs  benchmark_baseline.rs  benchmark_full_768d.rs  benchmark_range_query.rs  benchmark_wiki.rs
faiss-sphere-rs/src/: intrinsic_projection.rs  lib.rs  spherical_cap_tree.rs  spherical_index.rs  utils.rs
h-tree/: Cargo.toml  NEXT_STEPS.md
h-tree/benches/: htree_benchmark.rs
h-tree/docs/: PROOF.md
h-tree/src/: lib.rs  main.rs  merkle.rs  node.rs  spectral.rs  tree.rs  vector.rs
nullstellensatz-sat-poc/braid-fold-rs/: Cargo.toml
nullstellensatz-sat-poc/braid-fold-rs/src/: main.rs  quenched.rs  skeptic_elimination.rs  sub_angstrom.rs
pei/: Cargo.toml
pei/benches/: advanced_benchmark.rs  search_benchmark.rs
pei/scripts/: prepare_cifar.py
pei/src/: lib.rs  main.rs
pei/src/evidence/: dag.rs  mock_ops.rs  mod.rs  multimodal_ops.rs  operator.rs
pei/src/index/: candidate.rs  mod.rs  pei_index.rs
pei/src/query/: search.rs
pei/src/storage/: item_store.rs  mod.rs
resonant-bloom/: Cargo.toml
resonant-bloom/benches/: resonant_benchmark.rs
resonant-bloom/paper/: resonant_bloom.aux  resonant_bloom.out  resonant_bloom.tex
resonant-bloom/src/: lib.rs  main.rs
rewa-laws-experiment/rewa-investigation-rs/: Cargo.toml
rewa-laws-experiment/rewa-investigation-rs/src/: main.rs
sbng-core/: Cargo.toml  config_10k.json  config_wikipedia.json
sbng-core/benches/: bm25_baseline.rs  comparison.rs  eval_metrics.rs  eval_queries.json  indexing_bench.rs  three_way_comparison.rs
sbng-core/data/: sample.jsonl
sbng-core/index_parallel_test/: metadata.json
sbng-core/index_sample/: metadata.json
sbng-core/scripts/: analyze_latency.py  benchmark_reranker.py  download_optimized_model.py  download_wikipedia.py  evaluate_reranker.py  export_model.py  generate_synthetic_corpus.py  qualitative_eval.py  reranker_service.py  test_rerank.py  vector_baseline.py  vector_results.json
sbng-core/src/: config.rs  diagnose.rs  errors.rs  lib.rs  main.rs  persistence.rs  types.rs
sbng-core/src/bloom/: fingerprint.rs  mod.rs
sbng-core/src/corpus/: concept_extractor.rs  interner.rs  interning_extractor.rs  loader.rs  mod.rs  tokenizer.rs
sbng-core/src/graph/: builder.rs  edge.rs  metrics.rs  mod.rs  node.rs  pruning.rs  stats.rs
sbng-core/src/pipeline/: build_graph.rs  generate_signatures.rs  mod.rs
sbng-core/src/search/: concept_stats.rs  doc_fingerprints.rs  explainability.rs  mod.rs  reranker.rs
sbng-core/src/server/: mod.rs
sbng-core/tests/: integration_smoke.rs  reranker_benchmark.rs  reranker_eval.rs  user_verification.rs
semantixbit/: Cargo.toml  DOT_PRODUCT_OPTIMIZATION.md  README.md  RECALL_ANALYSIS.md  RECALL_IMPROVEMENTS.md  STRUCTURE.md  requirements.txt  run_benchmark.sh
semantixbit/examples/: benchmark_improvements.rs  benchmark_wiki.rs  evaluate_recall.rs
semantixbit/scripts/: baseline_faiss.py  prepare_wiki_data.py
semantixbit/src/: hybrid.rs  lib.rs  quantizer.rs  search.rs  storage.rs
shadow-rs/: Cargo.toml
shadow-rs/src/: main.rs
thermal-bloom/: Cargo.toml  PAPER_ABSTRACT.md  RESULTS.md  faiss_benchmark.py  faiss_benchmark_results.json  faiss_benchmark_v2.py  faiss_benchmark_v2_results.json  killer_visualization.py  thermal_bloom_results.json  thermal_bloom_v2_results.json  thermal_heatmap.csv  two_stage_benchmark.py  two_stage_benchmark_results.json  visualize.py
thermal-bloom/paper/: thermal_bloom.aux  thermal_bloom.out  thermal_bloom.tex
thermal-bloom/src/: main.rs
thermal-trie/: Cargo.toml
thermal-trie/benches/: trie_benchmark.rs
thermal-trie/src/: lib.rs
witness-retrieval/: Cargo.toml  README.md  benchmark_results_50000_768.json
witness-retrieval/benchmarks/: benchmark_faiss.py  generate_plots.py
witness-retrieval/paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
witness-retrieval/src/: __init__.py  adaptive_benchmark.rs  adaptive_flat_benchmark.rs  benchmark.rs  benchmark_v2.rs  fast_index.rs  full_adaptive_benchmark.rs  hierarchical.rs  hierarchical_v2.rs  hierarchical_v2_benchmark.rs  lib.rs  production.rs  speed_benchmark.rs  turbo_benchmark.rs  turbo_index.rs  witness_codes.py
(+1059 files in other folders)
