[package]
name = "resonant_bloom"
version = "0.1.0"
edition = "2021"
description = "A temporal Bloom filter using complex phasors for O(1) event sequence detection"

[dependencies]
num-complex = "0.4"
siphasher = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "resonant_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
