[package]
name = "sbng-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["nikitph@gmail.com"]
description = "Sparse Binary Neural Graph core library (PMI graph + Bloom semantic fingerprints)"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Graph library
petgraph = "0.6"

# Parallelism
rayon = "1.10"

# Interner
lasso = { version = "0.7", features = ["multi-threaded", "serde"] }

# Bitsets for Bloom fingerprints
fixedbitset = { version = "0.5", features = ["serde"] }

# Hashing for Bloom/IDs
twox-hash = "1.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# HTTP Server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Concurrent data structures
dashmap = "6.0"

[dev-dependencies]
pretty_assertions = "1"
criterion = "0.5"
anyhow = "1.0"
tantivy = "0.22"

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "indexing_bench"
harness = false

[[bench]]
name = "three_way_comparison"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
