[package]
name = "semantixbit"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core numerical computing
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Hashing for keyword channel
twox-hash = "1.6"

# JSON parsing
serde_json = "1.0"

# Utilities
rayon = "1.8"  # Parallel iterators
memmap2 = "0.9"  # Memory-mapped files

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[lib]
name = "semantixbit"
path = "src/lib.rs"
