[package]
name = "shadow-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.8.0"
candle-nn = "0.8.0"
anyhow = "1.0"
tokenizers = "0.20.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
