[package]
name = "thermal-bloom"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "4.2"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
