[package]
name = "witness_retrieval"
version = "0.2.0"
edition = "2021"

[lib]
name = "witness_retrieval"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rustc-hash = "1.1"          # Fast hashing
rayon = "1.8"               # Parallel iteration
ordered-float = "4.2"       # For sorting floats
bitvec = "1.0"              # Efficient bit vectors
ahash = "0.8"               # Fast hashing

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "benchmark_v2"
path = "src/benchmark_v2.rs"

[[bin]]
name = "adaptive_benchmark"
path = "src/adaptive_benchmark.rs"

[[bin]]
name = "full_adaptive_benchmark"
path = "src/full_adaptive_benchmark.rs"

[[bin]]
name = "hierarchical_v2_benchmark"
path = "src/hierarchical_v2_benchmark.rs"

[[bin]]
name = "adaptive_flat_benchmark"
path = "src/adaptive_flat_benchmark.rs"

[[bin]]
name = "speed_benchmark"
path = "src/speed_benchmark.rs"

[[bin]]
name = "turbo_benchmark"
path = "src/turbo_benchmark.rs"
