[package]
name = "rewa-investigation-rs"
version = "0.1.0"
edition = "2021"
description = "UNIFIED INVESTIGATION SUITE: Probing the Rough Edges of Semantic Thermodynamics"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
ndarray = "0.15"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"

[profile.release]
opt-level = 3
lto = true
